fixed vertical stretch on images

--- a/styles.css
+++ b/styles.css
@@ -214,7 +214,6 @@
 
 .project-thumbnail img {
   max-width: 100%;
-  height: 100%;
   transition: transform 0.4s ease-in-out;
 }
 
@@ -520,7 +519,11 @@ footer p {
   }
 
   .main__navbar {
-    padding: 5em 5em;
+    padding: 2em 5em;
+  }
+
+  .main__navbar img {
+    height: 12px;
   }
 
   .main__navbar ul {
@@ -593,7 +596,7 @@ footer p {
   }
 
   .main__navbar {
-    padding: 3em 3em;
+    padding: 2em 3em;
   }
 
   .main__body-header {
